--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,4 +1,28 @@
-.external {
+#external {
   background-color: blue;
   text-align: center;
+}
+#colorname {
+  /* colorname  */
+
+  color: black;
+
+  /* rgb( red , green , blue) */
+
+  /* rgba ( red , green , blue , alpha) alpha - opacity ( 0 to 1 -- ) 0 means - complete white 1 is  full shade */
+
+  background-color: rgba(25, 25, 25, 0.5);
+}
+#colorname2 {
+  /* hex code */
+
+  color: #b17f27b9;
+
+  /* HSL - based on color wheel - hue / saturation / lightnesss 
+        hue - color batayega -
+        saturation - defined in % - percentage value: 0% means a shade of gray, and 100% is the full color.
+        lightness -defined in %; 0% is black, 50% is neither light or dark, 100% is white.
+        0/360 -- red shades */
+
+  background-color: hsl(350, 50%, 50%);
 }
